# arbeitszeiterfassung_s4a

./: .git-blame-ignore-revs  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  codeql.yml  linters.yml
arbeitszeiterfassung_s4a/: hooks.py  install.py  modules.txt
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/attendance/: attendance.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/doctype/flexitime_correction/: flexitime_correction.js  flexitime_correction.json  flexitime_correction.py  test_flexitime_correction.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/doctype/mandatory_break/: mandatory_break.json  mandatory_break.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/doctype/working_time/: test_working_time.py  working_time.js  working_time.json  working_time.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/doctype/working_time_log/: working_time_log.json  working_time_log.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/doctype/working_time_settings/: test_working_time_settings.py  working_time_settings.js  working_time_settings.json  working_time_settings.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/employee_checkin/: employee_checkin.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/report/project_time/: project_time.js  project_time.json  project_time.py
arbeitszeiterfassung_s4a/arbeitszeiterfassung_s4a/report/working_time/: working_time.js  working_time.json  working_time.py
arbeitszeiterfassung_s4a/translations/: de.csv
